--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,268 @@
+* {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 .App {
+  background: linear-gradient(to left, #ffffff 0%, #dfe9f3 100%);
+
+  width: 100%;
+  height: 100%;
+}
+.App-header {
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.MainPage {
+}
+.tarh {
+  position: absolute;
+  left: -30%;
+}
+.logo {
+  position: absolute;
+  width: 10%;
+  height: 10%;
+  right: 0;
+}
+.navbar {
+  float: right;
+  width: 40%;
+  height: 5%;
+  margin-right: 15%;
+  margin-top: 2%;
+  overflow: auto;
+}
+
+.mainContent {
+  position: absolute;
+  width: 55%;
+  height: 70%;
+  top: 25%;
+  left: 40%;
+}
+.imagemainpage {
+  float: right;
+  width: 30%;
+  height: 70%;
+  margin-top: 6%;
+}
+.contextContainer {
+  width: 64%;
+  height: 30%;
+  margin-top: 12%;
+  margin-left: 5%;
+}
+.contextMain {
+  text-align: right;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.buttonContainer {
+  width: 50%;
+  height: 40%;
+  margin-left: 50%;
+}
+.buttonstyle {
+  background-color: #ecc75b;
+  border: none;
+  width: 40%;
+  height: 70%;
+  margin-right: 10%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+  text-align: center;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  box-shadow: 0px 4px 5px rgba(196, 196, 196, 0.38);
+}
+.FalPage {
+  background-image: url("./assets/images/backgroundFalimage.svg");
+  width: 100%;
+  height: 100%;
+}
+.mainCard {
+  width: 35%;
+  height: 85%;
+  background: rgba(236, 210, 118, 0.8);
+  border-radius: 15px;
+  margin-left: 60%;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  direction: rtl;
+  padding: 1%;
+}
+.falContainer {
+  width: 98%;
+  height: 55%;
+  margin-right: 1%;
+  background: #ffffff;
+  border-radius: 15px;
+  padding-top: 2%;
+}
+.maniFal {
+  width: 98%;
+  height: 33%;
+  margin-right: 1%;
+  background: #ffffff;
+  border-radius: 15px;
+  margin-top: 3%;
+}
+.fal {
+  width: 90%;
+  height: 75%;
+  margin-right: 5%;
+  align-self: center;
+
+  padding-top: 2%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  height: 10%;
+  margin-bottom: 5%;
 }
+.ghazaliat {
+  width: 100%;
+  height: 10%;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+}
+.Ashaar {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.byt {
+  width: 50%;
+  font-size: 12px;
+}
+.byte {
+  width: 50%;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.audio {
+  width: 50%;
+  height: 15%;
+  margin-right: 25%;
 }
+.manifal {
+  height: 15%;
+  padding: 3%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: right;
+}
+.maniiFal {
+  width: 70%;
+  margin-right: 15%;
+}
+.buttonFal {
+  background-color: #dfe9f3;
+  border: none;
+  width: 30%;
+  height: 6%;
+  margin-right: 10%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px 0px;
+  text-align: center;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  margin-top: 3%;
+  margin-right: 35%;
+}
+.navbarbutton {
+  float: right;
+  width: 20%;
+  text-decoration: none;
+  text-align: center;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana;
+  border: none;
+  background-color: transparent;
+  margin-right: 8%;
+  font-size: 16px;
+  color: black;
+}
+.AsharPage {
+  width: 100%;
+  height: 100%;
+  background-image: url("./assets/images/backgroundAshaarImage.svg");
+  background-repeat: no-repeat;
+  display: flex;
+}
+.boxContent {
+  width: 60%;
+  height: 60%;
+  background: #f5d36f;
+  border: 1px solid #f4bb13;
+  margin-top: 9%;
+  padding: 1%;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  direction: rtl;
+}
+.boxShaeer {
+  width: 40%;
+  height: 53%;
+  background: rgba(208, 227, 245, 0.5);
+  border: 1px solid #99c4ef;
+  box-sizing: border-box;
+  margin-top: 13%;
+}
+.imageSaher {
+  height: 30%;
+  width: 15%;
+  background-color: #bbb;
+  border-radius: 50%;
+  margin-left: 82%;
+  display: inline-block;
+  filter: drop-shadow(0px 5px 4px rgba(183, 183, 183, 0.87));
+}
+.tarh2 {
+  position: absolute;
+  float: left;
+  margin-left: 90%;
+  width: 10%;
+  height: 20%;
+}
+.Ashar {
+  width: 80%;
+  height: 60%;
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 5%;
+  margin-top: -10%;
+}
+.reresh {
+  margin-top: 2%;
+  margin-left: 96%;
+  border: none;
+  text-decoration: none;
+  background-color: transparent;
+  width: 6%;
+  height: 10%;
+}
+.contentShaer {
+  direction: rtl;
+  text-align: right;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana;
+}
+.shaerContainer {
+  width: 90%;
+  height: 60%;
+  margin-top: 10%;
+  margin-left: 5%;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
