--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
 }
+
 .App {
   background: linear-gradient(to left, #ffffff 0%, #dfe9f3 100%);
 
@@ -14,6 +15,8 @@
   font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .MainPage {
+  background-image: url("./assets/images/backdesign.svg");
+  background-repeat: no-repeat;
 }
 .tarh {
   position: absolute;
@@ -32,6 +35,7 @@
   margin-right: 15%;
   margin-top: 2%;
   overflow: auto;
+  white-space: nowrap;
 }
 
 .mainContent {
@@ -84,30 +88,32 @@
   height: 100%;
 }
 .mainCard {
+  position: absolute;
   width: 35%;
-  height: 85%;
+  height: 90%;
   background: rgba(236, 210, 118, 0.8);
   border-radius: 15px;
   margin-left: 60%;
   font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   direction: rtl;
   padding: 1%;
+  margin-top: 2%;
 }
 .falContainer {
   width: 98%;
-  height: 55%;
+  height: 67%;
   margin-right: 1%;
   background: #ffffff;
   border-radius: 15px;
-  padding-top: 2%;
+  padding-top: 1%;
 }
 .maniFal {
   width: 98%;
-  height: 33%;
+  height: 25%;
   margin-right: 1%;
   background: #ffffff;
   border-radius: 15px;
-  margin-top: 3%;
+  margin-top: 2%;
 }
 .fal {
   width: 90%;
@@ -120,12 +126,11 @@
 }
 .title {
   height: 10%;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
 }
 .ghazaliat {
   width: 100%;
-  height: 10%;
-
+  height: 6%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -148,6 +153,7 @@
   width: 50%;
   height: 15%;
   margin-right: 25%;
+  margin-top: 5%;
 }
 .manifal {
   height: 15%;
@@ -174,7 +180,7 @@
   text-align: center;
   font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-  margin-top: 3%;
+  margin-top: 1%;
   margin-right: 35%;
 }
 .navbarbutton {
@@ -239,8 +245,8 @@
   margin-top: -10%;
 }
 .reresh {
-  margin-top: 2%;
-  margin-left: 96%;
+  margin-top: 1%;
+  margin-left: 95%;
   border: none;
   text-decoration: none;
   background-color: transparent;
@@ -265,4 +271,79 @@
 a {
   text-decoration: none;
   color: black;
+}
+.tarh {
+  height: 40%;
+  margin-top: 2%;
+  margin-left: -14%;
+}
+.shaeranlist {
+  position: absolute;
+  height: 35%;
+  width: 94%;
+  margin-left: 6%;
+  margin-top: 28%;
+  background-color: transparent;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.shaeranlist > button {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+.shaer {
+  width: 18%;
+  background-color: transparent;
+  border-radius: 12px;
+  margin-right: 2%;
+  border: none;
+  text-decoration: none;
+  display: inline-block;
+}
+.imageShaerList {
+  position: relative;
+  height: 80%;
+  width: 100%;
+}
+.contentShaerContainer {
+  height: 100%;
+  width: 80%;
+  background-color: white;
+  border-radius: 15px 15px;
+  padding: 0;
+  margin: 0;
+}
+.nameShaer {
+  height: 12%;
+  background-color: rgb(255, 255, 255);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  font-family: Rezvan, "Segoe UI", Tahoma, Geneva, Verdana;
+  color: #171717;
+}
+.scrollbutton {
+  width: 5%;
+  height: 15%;
+  margin-left: 5%;
+  display: inline-block;
+  margin-right: 5%;
+}
+.npbutton {
+  border: none;
+  width: 50%;
+  height: 80%;
+  border-radius: 50%;
+  text-decoration: none;
+  background-color: #6788be;
+  margin-left: 2%;
+  margin-right: 5%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
 }
